--- a/docs/versioned_docs/version-2.0.0/use_cases/confusion.mdx
+++ b/docs/versioned_docs/version-2.0.0/use_cases/confusion.mdx
@@ -7,11 +7,11 @@ keywords:
   - instant audience feedback
 ---
 
-import ChartGrid from '../../src/components/ChartGrid.tsx'
-import BarChart from '../../src/components/BarChart.tsx'
-import TableChart from '../../src/components/TableChart.tsx'
-import ImageModal from '../../src/components/ImageModal.tsx'
-import CaseSummary from '../../src/components/CaseSummary.tsx'
+import ChartGrid from '../../../src/components/ChartGrid.tsx'
+import BarChart from '../../../src/components/BarChart.tsx'
+import TableChart from '../../../src/components/TableChart.tsx'
+import ImageModal from '../../../src/components/ImageModal.tsx'
+import CaseSummary from '../../../src/components/CaseSummary.tsx'
 
 <CaseSummary goals={[
   'Enable students to provide instant feedback on key metrics regarding the lecture',
@@ -37,10 +37,10 @@ import CaseSummary from '../../src/components/CaseSummary.tsx'
 
 ## Implementation
 
-import ConfusionInput from '../../static/img/confusion_input.png'
-import ConfusionGauge from '../../static/img/confusion_gauge_single.png'
-import ConfusionCockpit from '../../static/img/confusion_cockpit.png'
-import ConfusionHistory from '../../static/img/evaluation_confusion.png'
+import ConfusionInput from '../../../static/img/confusion_input.png'
+import ConfusionGauge from '../../../static/img/confusion_gauge_single.png'
+import ConfusionCockpit from '../../../static/img/confusion_cockpit.png'
+import ConfusionHistory from '../../../static/img/evaluation_confusion.png'
 
 <ImageModal.Group>
   <ImageModal src={ConfusionInput} description="The audience can give you feedback on the speed and difficulty of the lecture by dragging the corresponding sliders to one of five possible positions (ranging from very slow to very fast and very easy to very hard). Each participant can provide feedback up to once a minute." title="Audience View" />
