--- a/docs/versioned_docs/version-2.0.0/use_cases/qa.mdx
+++ b/docs/versioned_docs/version-2.0.0/use_cases/qa.mdx
@@ -8,11 +8,11 @@ keywords:
   - live Q&A
 ---
 
-import ChartGrid from '../../src/components/ChartGrid.tsx'
-import BarChart from '../../src/components/BarChart.tsx'
-import TableChart from '../../src/components/TableChart.tsx'
-import CaseSummary from '../../src/components/CaseSummary.tsx'
-import ImageModal from '../../src/components/ImageModal.tsx'
+import ChartGrid from '../../../src/components/ChartGrid.tsx'
+import BarChart from '../../../src/components/BarChart.tsx'
+import TableChart from '../../../src/components/TableChart.tsx'
+import CaseSummary from '../../../src/components/CaseSummary.tsx'
+import ImageModal from '../../../src/components/ImageModal.tsx'
 
 <CaseSummary goals={[
   'Encourage students to ask questions by providing them with an anonymous channel',
@@ -42,10 +42,10 @@ import ImageModal from '../../src/components/ImageModal.tsx'
 
 ## Implementation
 
-import AudienceViewSrc from '../../static/img/implementation_qa_audience.png'
-import RunningSessionSrc from '../../static/img/implementation_qa_running.png'
-import LecturerCockpitSrc from '../../static/img/implementation_lecturer_cockpit.png'
-import EvaluationSrc from '../../static/img/implementation_evaluation.png'
+import AudienceViewSrc from '../../../static/img/implementation_qa_audience.png'
+import RunningSessionSrc from '../../../static/img/implementation_qa_running.png'
+import LecturerCockpitSrc from '../../../static/img/implementation_lecturer_cockpit.png'
+import EvaluationSrc from '../../../static/img/implementation_evaluation.png'
 
 <ImageModal.Group>
   <ImageModal src={AudienceViewSrc} description="Students read and upvote questions posted by other students, as well as post new questions of their own. Additionally, they can see and react to all of the responses given by the lecturer, which might help the lecturing team clarify their responses (if unclear)." title="Audience View" />
