--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -34,6 +34,7 @@
       "installButton": "Install Now"
     },
     "generic": {
+      "profile": "Profile",
       "yes": "Yes",
       "no": "No",
       "draft": "Draft",
@@ -252,7 +253,7 @@
     },
     "profile": {
       "publicProfile": "Profile Visibility",
-      "isProfilePublic": "Should your profile be displayed to other participants?",
+      "isProfilePublic": "Should your profile and pseudonym be displayed to other participants?",
       "editProfile": "Edit profile",
       "editProfileFailed": "Unfortunately, an error occurred while saving the changes. The username you have chosen may already be taken. Please check your entries and try again.",
       "achievements": "Achievements",
@@ -265,7 +266,9 @@
       "emailInvalid": "Please enter a valid e-mail address.",
       "usernameRequired": "Please enter a username here.",
       "passwordRequired": "Please enter a password here.",
-      "welcomeMessage": "Welcome to KlickerUZH! If this is your first time here, please set a password and define your own username and avatar."
+      "welcomeMessage": "Welcome to KlickerUZH! If this is your first time here, please set a password and define your own username and avatar.",
+      "deleteProfile": "Delete Account",
+      "deleteProfileDescription": "Deleting your KlickerUZH account will delete all associated data and prevent a new account from being created in your current browser."
     },
     "avatar": {
       "hair": "Hair",
