chore: update language files and translations

--- a/packages/i18n/messages/de.json
+++ b/packages/i18n/messages/de.json
@@ -188,6 +188,7 @@
       "noGroups": "Bisher wurden noch keine Gruppen gebildet. Los geht's!",
       "noGroupPoints": "Bisher hat noch keine Gruppe Punkte erhalten. Los geht's!",
       "groupLeaderboardUpdate": "Das Gruppenleaderboard wird täglich aktualisiert.<b>x</b>Gruppen mit einem Mitglied erhalten keine Punkte.",
+      "joinLeaderboardCourse": "Treten Sie dem Leaderboard für <b>{name}</b> bei",
       "membersScore": "Punkte durch Mitglieder",
       "groupActivityScore": "Punkte durch Gruppenaktivitäten",
       "totalScore": "Total Punkte",
@@ -222,7 +223,6 @@
       "totalPoints": "Total Punkte (gesammelt): {points}",
       "totalXp": "{xp} XP gesammelt",
       "questionTypeNotSupported": "Dieser Fragetyp ist aktuell für Lernelemente nicht verfügbar.",
-      "questionProgress": "Frage: {current}/{total}",
       "newPointsFrom": "Erneute Punkte/XP ab:",
       "othersAnswered": "So haben andere geantwortet",
       "flagQuestion": "Frage melden",
@@ -662,7 +662,6 @@
       "noMicroSessions": "Keine Micro-Sessions vorhanden",
       "courseLeaderboard": "Kurs Leaderboard",
       "participantsLeaderboard": "Teilnehmende Leaderboard: {number}",
-      "courseParticipants": "Kursteilnehmende: {number}",
       "avgPoints": "Durchschnittl. Punkte: {points}",
       "runningSession": "Laufende Session",
       "publicAccess": "Öffentlicher Zugriff",
