--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -188,6 +188,7 @@
       "noGroups": "No groups have been created yet. Let's go!",
       "noGroupPoints": "No group points have been collected yet. Let's go!",
       "groupLeaderboardUpdate": "The group leaderboard will be updated daily.<b>x</b>Groups with a single member will not receive any points.",
+      "joinLeaderboardCourse": "Join the leaderboard for <b>{name}</b>",
       "membersScore": "Points by group members",
       "groupActivityScore": "Points by group activities",
       "totalScore": "Total points",
@@ -222,7 +223,6 @@
       "totalPoints": "Total points (collected): {points}",
       "totalXp": "{xp} XP collected",
       "questionTypeNotSupported": "This question type is currently not available for learning elements",
-      "questionProgress": "Question: {current}/{total}",
       "newPointsFrom": "New points/XP from:",
       "othersAnswered": "Others answered as follows",
       "flagQuestion": "Report question",
@@ -662,7 +662,6 @@
       "noMicroSessions": "No micro-sessions available",
       "courseLeaderboard": "Course Leaderboard",
       "participantsLeaderboard": "Participants Leaderboard: {number}",
-      "courseParticipants": "Course participants: {number}",
       "avgPoints": "Average points: {points}",
       "runningSession": "Running session",
       "publicAccess": "Public access",
