wip: account creation page

--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -258,6 +258,7 @@
       "editProfileFailed": "Unfortunately, an error occurred while saving the changes. The username you have chosen may already be taken. Please check your entries and try again.",
       "achievements": "Achievements",
       "myProfile": "My Profile",
+      "createProfile": "Create Profile",
       "usernameMinLength": "The username must be at least {length} characters long.",
       "usernameMaxLength": "The username must not be longer than {length} characters.",
       "passwordMinLength": "The password must be at least {length} characters long.",
