--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -34,6 +34,9 @@
       "installButton": "Install Now"
     },
     "generic": {
+      "profile": "Profile",
+      "yes": "Yes",
+      "no": "No",
       "draft": "Draft",
       "published": "Published",
       "points": "Points",
@@ -185,6 +188,7 @@
       "noGroups": "No groups have been created yet. Let's go!",
       "noGroupPoints": "No group points have been collected yet. Let's go!",
       "groupLeaderboardUpdate": "The group leaderboard will be updated daily.<b>x</b>Groups with a single member will not receive any points.",
+      "joinLeaderboardCourse": "Join the leaderboard for <b>{name}</b>",
       "membersScore": "Points by group members",
       "groupActivityScore": "Points by group activities",
       "totalScore": "Total points",
@@ -219,7 +223,6 @@
       "totalPoints": "Total points (collected): {points}",
       "totalXp": "{xp} XP collected",
       "questionTypeNotSupported": "This question type is currently not available for learning elements",
-      "questionProgress": "Question: {current}/{total}",
       "newPointsFrom": "New points/XP from:",
       "othersAnswered": "Others answered as follows",
       "flagQuestion": "Report question",
@@ -249,17 +252,29 @@
       "solvedAt": "Resolved at {date}"
     },
     "profile": {
+      "publicProfile": "Profile Visibility",
+      "isProfilePublic": "Should your profile and pseudonym be displayed to other participants? If you deactivate this option, you will be displayed as Anonymous to other participants. Note that you will see all other participants as Anonymous as well.",
       "editProfile": "Edit profile",
       "editProfileFailed": "Unfortunately, an error occurred while saving the changes. The username you have chosen may already be taken. Please check your entries and try again.",
       "achievements": "Achievements",
       "myProfile": "My Profile",
+      "createProfile": "Create Profile",
       "usernameMinLength": "The username must be at least {length} characters long.",
       "usernameMaxLength": "The username must not be longer than {length} characters.",
       "passwordMinLength": "The password must be at least {length} characters long.",
       "identicalPasswords": "Passwords must match.",
+      "emailRequired": "Please enter an e-mail address.",
+      "emailInvalid": "Please enter a valid e-mail address.",
       "usernameRequired": "Please enter a username here.",
       "passwordRequired": "Please enter a password here.",
-      "welcomeMessage": "Welcome to KlickerUZH! If this is your first time here, please set a password and define your own username and avatar."
+      "welcomeMessage": "Welcome to KlickerUZH! If this is your first time here, please set a password and define your own username and avatar.",
+      "deleteProfile": "Delete Account",
+      "deleteProfileDescription": "Deleting your KlickerUZH account will delete all associated data and prevent a new account from being created in your current browser.",
+      "deleteProfileConfirmation": "Are you sure you want to delete your account? All data related to your account will be deleted. This action cannot be undone.",
+      "privacyDataCollection": "",
+      "privacyDataSharing": "",
+      "privacyDataUsage": "",
+      "privacyDataStorage": ""
     },
     "avatar": {
       "hair": "Hair",
@@ -652,7 +667,6 @@
       "noMicroSessions": "No micro-sessions available",
       "courseLeaderboard": "Course Leaderboard",
       "participantsLeaderboard": "Participants Leaderboard: {number}",
-      "courseParticipants": "Course participants: {number}",
       "avgPoints": "Average points: {points}",
       "runningSession": "Running session",
       "publicAccess": "Public access",
