--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -196,7 +196,8 @@
       "groupActivityScore": "Points by group activities",
       "totalScore": "Total points",
       "bookmarkedQuestionsTitle": "Bookmarks for {courseName}",
-      "bookmarkedQuestionsDesc": "This page allows you to repeat all questions with bookmarks from the course {courseName}. They will be displayed as a regular learning element."
+      "bookmarkedQuestionsDesc": "This page allows you to repeat all questions with bookmarks from the course {courseName}. They will be displayed as a regular learning element.",
+      "noBooksmarksSet": "You have not bookmarked any questions yet. Simply click on the bookmark symbol on a question for this."
     },
     "joinCourse": {
       "title": "Join Course \"{name}\"",
@@ -548,7 +549,9 @@
       "deleteLiveSession": "Delete Live Session",
       "confirmLiveSessionDeletion": "Are you sure you want to delete the following live session?",
       "liveSessionDeletionHint": "Deleting a live session is only possible as long as it has not been started. Deleted live sessions cannot be restored at a later date.",
-      "evaluationLinksEmbedding": "Evaluation links for embedding in PowerPoint"
+      "evaluationLinksEmbedding": "Evaluation links for embedding in PowerPoint",
+      "noSessions": "No sessions available",
+      "creationExplanation": "To create your first session, go back to the <link>question pool</link>. There you can create all different types of KlickerUZH elements and add questions from the question pool."
     },
     "cockpit": {
       "firstBlock": "Start first block",
