--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -344,7 +344,8 @@
       "yourTasks": "Your tasks",
       "sendAnswers": "Submit answers",
       "oneSolutionPerGroup": "Each group can only submit one solution. Only submit your solutions when you are sure.",
-      "alreadySubmittedAt": "Your group has already submitted its solutions (on {date}).<br></br> The evaluation will be published later and communicated separately."
+      "alreadySubmittedAt": "Your group has already submitted its solutions (on {date}).<br></br> The evaluation will be published later and communicated separately.",
+      "joinLeaderboard": "In order to collect points within the scope of the group activity, you must join the course leaderboard. To do this, switch to the other tab and confirm your participation."
     }
   },
   "manage": {
