--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -197,7 +197,9 @@
       "totalScore": "Total points",
       "bookmarkedQuestionsTitle": "Bookmarks for {courseName}",
       "bookmarkedQuestionsDesc": "This page allows you to repeat all questions with bookmarks from the course {courseName}. They will be displayed as a regular learning element.",
-      "noBooksmarksSet": "You have not bookmarked any questions yet. Simply click on the bookmark symbol on a question for this."
+      "noBooksmarksSet": "You have not bookmarked any questions yet. Simply click on the bookmark symbol on a question for this.",
+      "awards": "Awards",
+      "open": "open"
     },
     "joinCourse": {
       "title": "Join Course \"{name}\"",
