--- a/packages/i18n/messages/de.json
+++ b/packages/i18n/messages/de.json
@@ -456,6 +456,8 @@
       "optionalTimeLimit": "Optionales Zeit-Limit",
       "timeLimitTooltip": "Zeit-Limit für Block ${blockIx} in Sekunden",
       "newBlock": "Neuer Block",
+      "newBlockSelected": "Block mit Auswahl",
+      "pasteSelection": "Auswahl einfügen",
       "displayNameTooltip": "Der Anzeigename wird den Teilnehmenden bei der Durchführung angezeigt.",
       "microSessionTypes": "Micro-Sessions können nur Single-Choice, Multiple-Choice, Kprim und Numerische Fragen enthalten.",
       "microSessionCreated": "Micro-Session <b>{name}</b> erfolgreich erstellt.",
