--- a/packages/i18n/messages/en.json
+++ b/packages/i18n/messages/en.json
@@ -461,9 +461,9 @@
       "optionalTimeLimit": "Optional time limit",
       "timeLimitTooltip": "Time limit for block ${blockIx} in seconds",
       "newBlock": "New block",
-      "newBlockSelected": "Block with selection",
-      "pasteSelection": "Paste selection",
-      "pasteSingleQuestions": "Paste single questions",
+      "newBlockSelected": "Add 1 block with {count} questions",
+      "pasteSelection": "Add {count} questions",
+      "pasteSingleQuestions": "Add {count} blocks with 1 question",
       "displayNameTooltip": "Der Anzeigename wird den Teilnehmenden bei der Durchführung angezeigt.",
       "microSessionTypes": "Micro-sessions can only contain single choice, multiple choice, kprim and numerical questions.",
       "microSessionCreated": "Your micro-session <b>{name}</b> has been created successfully.",
