feat(apps/frontend-manage): add batch operations for live session creation (#3805)
Co-authored-by: Roland Schläfli <rolandschlaefli@gmail.com>

--- a/packages/i18n/messages/de.json
+++ b/packages/i18n/messages/de.json
@@ -460,6 +460,9 @@
       "optionalTimeLimit": "Optionales Zeit-Limit",
       "timeLimitTooltip": "Zeit-Limit für Block ${blockIx} in Sekunden",
       "newBlock": "Neuer Block",
+      "newBlockSelected": "1 Block mit {count} Fragen anfügen",
+      "pasteSelection": "{count} Fragen hinzufügen",
+      "pasteSingleQuestions": "{count} Blocks mit 1 Frage anfügen",
       "displayNameTooltip": "Der Anzeigename wird den Teilnehmenden bei der Durchführung angezeigt.",
       "microSessionTypes": "Micro-Sessions können nur Single-Choice, Multiple-Choice, Kprim und Numerische Fragen enthalten.",
       "microSessionCreated": "Micro-Session <b>{name}</b> erfolgreich erstellt.",
