--- a/apps/docs/docs/nutzungsbedingungen.mdx
+++ b/apps/docs/docs/nutzungsbedingungen.mdx
@@ -9,32 +9,32 @@ Das Teaching Center des Instituts für Banking und Finance der Universität Zür
 
 ## Lizenz
 
-Der LIZENZGEBER gewährt IHNEN eine gebührenfreie, weltweite, nicht-exklusive, nicht-übertragbare und nicht-kommerzielle Lizenz zur Nutzung von KLICKERUZH ausschließlich für Bildungs-, Evaluierungs-, Demonstrations- und nicht-kommerzielle Forschungszwecke. Die zugrundeliegende Software wird im Ist-Zustand unter den Bedingungen der AGPL-3.0 freigegeben und darf gemäß dieser Lizenz verwendet, modifiziert und verbreitet werden.
+Der LIZENZGEBER gewährt IHNEN eine gebührenfreie, weltweite, nicht-exklusive, nicht-übertragbare und nicht-kommerzielle Lizenz zur Nutzung von KLICKERUZH ausschliesslich für Bildungs-, Evaluierungs-, Demonstrations- und nicht-kommerzielle Forschungszwecke. Die zugrundeliegende Software wird as is unter den Bedingungen der AGPL-3.0 freigegeben und darf gemäss dieser Lizenz verwendet, modifiziert und verbreitet werden.
 
 ## Laufzeit
 
-Diese Lizenz tritt in dem Moment in Kraft, in dem SIE vom LIZENZGEBER Zugang zum KLICKERUZH erhalten. Die Lizenz gilt bis zur Beendigung durch den LIZENZGEBER. Der LIZENZGEBER kann sie jederzeit beenden, indem er den Zugang zum KLICKERUZH sperrt. Er wird die Lizenz auch mit sofortiger Wirkung kündigen, wenn SIE eine Bedingung dieser VEREINBARUNG nicht erfüllen.
+Diese Lizenz tritt in dem Moment in Kraft, in dem SIE vom LIZENZGEBER Zugang zum KLICKERUZH erhalten. Die Lizenz gilt bis zur Beendigung durch den LIZENZGEBER. Der LIZENZGEBER kann die Lizenz jederzeit beenden, indem er den Zugang zum KLICKERUZH sperrt. Er wird die Lizenz auch mit sofortiger Wirkung kündigen, wenn SIE eine Bedingung dieser VEREINBARUNG nicht erfüllen.
 
 ## Gebühren
 
-Alle Nutzenden, die der Universität Zürich angehören (d.h. im Besitz einer @uzh.ch-E-Mail-Adresse sind), erhalten mit der Erstellung des Kontos vollen Zugang zu allen Funktionen von KLICKERUZH.
+Alle Nutzenden, die der Universität Zürich angehören (d.h. in ihrem Konto eine @uzh.ch-E-Mail-Adresse hinterlegen), erhalten mit der Erstellung des Kontos vollen Zugang zu allen Funktionen des KLICKERUZH.
 
-Nutzende ohne Zugehörigkeit zur Universität Zürich (d.h. ohne @uzh.ch-E-Mail-Adresse) erhalten einen kostenlosen, eingeschränkten Zugang zur Plattform. Um als externer Benutzer und/oder Institution vollen Zugang zur Plattform zu erhalten, kontaktieren Sie uns für eine individuelle Vereinbarung oder machen Sie von dem Recht Gebrauch, KLICKERUZH selbst zu hosten, wie in der Lizenz angegeben.
+Nutzende ohne Zugehörigkeit zur Universität Zürich (d.h. ohne hinterlegte @uzh.ch-E-Mail-Adresse) erhalten einen kostenlosen, eingeschränkten Zugang zur Plattform. Um als externer Benutzer und/oder Institution vollen Zugang zur Plattform zu erhalten, kontaktieren Sie uns für eine individuelle Vereinbarung oder machen Sie von dem Recht Gebrauch, KLICKERUZH selbst zu hosten, wie in der Lizenz angegeben.
 
 Einige Funktionen, die in KLICKERUZH integriert werden können (z.B. Sprachmodell-Integrationen von Drittanbietern wie OpenAI), erfordern möglicherweise die Eingabe eines eigenen API-Schlüssels, dessen Nutzung durch den Dienstanbieter in Rechnung gestellt wird.
 
 ## Datenschutz
 
-Alle Daten, die im Rahmen des Dienstes von den Teilnehmenden erhoben und IHNEN durch Funktionalitäten des KLICKERUZH zur Verfügung gestellt werden, dürfen nur in anonymisierter und nicht identifizierbarer Form und nur zu Zwecken der Lehre oder Forschung weiter ausgewertet oder mit externen Datenquellen kombiniert werden. Der LIZENZGEBER übernimmt keine Verantwortung für Analysen, die SIE mit diesen Daten durchführen. SIE sind für eine transparente und datenschutzkonforme Kommunikation an die Teilnehmenden über die weitere Auswertung der Ihnen zur Verfügung gestellten Daten innerhalb von KLICKERUZH verantwortlich.
+Alle Daten, die im Rahmen des Dienstes von den Teilnehmenden erhoben und IHNEN durch Funktionalitäten des KLICKERUZH zur Verfügung gestellt werden, dürfen nur in anonymisierter und nicht identifizierbarer Form und nur zu Zwecken der Lehre oder Forschung weiter ausgewertet oder mit externen Datenquellen kombiniert werden. Der LIZENZGEBER übernimmt keine Verantwortung für Analysen, die SIE mit diesen Daten durchführen. SIE sind für eine datenschutzkonforme Speicherung allfälliger exportierter Daten und transparente und datenschutzkonforme Kommunikation an die Teilnehmenden über die weitere Auswertung der Ihnen zur Verfügung gestellten Daten innerhalb von KLICKERUZH verantwortlich.
 
 Wenn SIE optionale Dienste nutzen, die mit KLICKERUZH integriert werden können, aber nicht von KLICKERUZH zur Verfügung gestellt werden (z.B. Sprachmodellintegrationen von Drittanbietern wie OpenAI), müssen SIE sicherstellen, dass die Bedingungen und Datenschutzbestimmungen der jeweiligen Anbieter mit IHREM verbindlichen Recht und Ihren Vorschriften vereinbar sind.
 
 ## Kein Recht auf Gewährleistung / Entschädigung
 
-Der KlickerUZH Online-Service wird ohne Mängelgewähr zur Verfügung gestellt, und jegliche ausdrückliche oder stillschweigende Gewährleistung, einschließlich, aber nicht beschränkt auf die stillschweigende Gewährleistung der Marktgängigkeit und Eignung für einen bestimmten Zweck, wird abgelehnt. Der Lizenzgeber gibt keine Zusicherung oder Garantie, dass der KLICKERUZH oder die Nutzung des KLICKERUZH keine Patent- oder sonstigen Eigentumsrechte verletzt. In keinem Fall haftet der Lizenzgeber für direkte, indirekte, zufällige, besondere, beispielhafte Schäden oder Folgeschäden (einschließlich, aber nicht beschränkt auf die Beschaffung von Ersatzgütern oder -dienstleistungen, Nutzungs-, Daten- oder Gewinnverluste oder Geschäftsunterbrechungen), wie auch immer diese verursacht wurden und auf welcher Haftungstheorie sie beruhen, unabhängig davon, ob es sich um Vertragshaftung, verschuldensunabhängige Haftung oder unerlaubte Handlung (einschließlich Fahrlässigkeit oder sonstiges) handelt, die in irgendeiner Weise aus der Nutzung dieses KLICKERUZH entstehen, selbst wenn auf die Möglichkeit solcher Schäden hingewiesen wurde. Der Lizenzgeber übernimmt keine Gewährleistung dafür, dass der KLICKERUZH frei von Mängeln ist, ohne Unterbrechung läuft, für das Zusammenspiel mit anderen Programmen geeignet ist bzw. in Kombination mit Hardware- oder Softwareprodukten Dritter funktioniert, oder dass Programmfehler vom Lizenzgeber korrigiert werden.
+KLICKERUZH wird ohne Mängelgewähr as is zur Verfügung gestellt, und jegliche ausdrückliche oder stillschweigende Gewährleistung, einschliesslich, aber nicht beschränkt auf die stillschweigende Gewährleistung der Marktgängigkeit und Eignung für einen bestimmten Zweck, wird abgelehnt. Der LIZENZGEBER gibt keine Zusicherung oder Garantie, dass der KLICKERUZH oder die Nutzung des KLICKERUZH keine Patent- oder sonstigen Eigentumsrechte verletzt. In keinem Fall haftet der Lizenzgeber für direkte, indirekte, zufällige, besondere, beispielhafte Schäden oder Folgeschäden (einschliesslich, aber nicht beschränkt auf die Beschaffung von Ersatzgütern oder -dienstleistungen, Nutzungs-, Daten- oder Gewinnverluste oder Geschäftsunterbrechungen), wie auch immer diese verursacht wurden und auf welcher Haftungstheorie sie beruhen, unabhängig davon, ob es sich um Vertragshaftung, verschuldensunabhängige Haftung oder unerlaubte Handlung (einschliesslich Fahrlässigkeit oder sonstiges) handelt, die in irgendeiner Weise aus der Nutzung dieses KLICKERUZH entstehen, selbst wenn auf die Möglichkeit solcher Schäden hingewiesen wurde. Der LIZENZGEBER übernimmt keine Gewährleistung dafür, dass der KLICKERUZH frei von Mängeln ist, ohne Unterbrechung läuft, für das Zusammenspiel mit anderen Programmen geeignet ist bzw. in Kombination mit Hardware- oder Softwareprodukten Dritter funktioniert, oder dass Programmfehler vom Lizenzgeber korrigiert werden.
 
-Sie sind verantwortlich für die Auswahl des KLICKERUZH, um die beabsichtigten Ergebnisse zu erzielen, die Verwendung des KLICKERUZH und die daraus resultierenden Ergebnisse. Sie verpflichten sich, den Lizenzgeber und seine Mitarbeiter von allen Ansprüchen Dritter freizustellen, die sich aus der Nutzung der Software durch Sie ergeben.
+Sie sind verantwortlich für die Anwendung des KLICKERUZH, um die beabsichtigten Ergebnisse zu erzielen, die Verwendung des KLICKERUZH und die daraus resultierenden Ergebnisse. Sie verpflichten sich, den LIZENZGEBER und seine Mitarbeitenden von allen Ansprüchen Dritter freizustellen, die sich aus der Nutzung der Software durch SIE ergeben.
 
 ## Allgemeines
 
-Diese VEREINBARUNG unterliegt ausschliesslich schweizerischem Recht, unter Ausschluss des Kollisionsrechts. SIE erklären sich unwiderruflich damit einverstanden, sich in Bezug auf jegliche Streitigkeiten der ausschließlichen Zuständigkeit der Gerichte von Zürich, Schweiz, zu unterwerfen.
+Diese VEREINBARUNG unterliegt ausschliesslich schweizerischem Recht, unter Ausschluss des Kollisionsrechts. SIE erklären sich unwiderruflich damit einverstanden, sich in Bezug auf jegliche Streitigkeiten der ausschliesslichen Zuständigkeit der Gerichte von Zürich, Schweiz, zu unterwerfen.
