--- a/apps/docs/docs/terms_of_use.mdx
+++ b/apps/docs/docs/terms_of_use.mdx
@@ -5,6 +5,8 @@ title: Terms of Service
 
 **Updated on August 26, 2023**
 
+> This is a translation of the [original statement in German](/nutzungsbedingungen). The translation is provided for information purposes only and has no legal bearing. Only the German document is legally binding.
+
 The Teaching Center of the Department of Banking and Finance at the University of Zurich (hereinafter "LICENSOR") provides this online service (hereinafter "KLICKERUZH") and licenses its use to you (hereinafter "YOU") under the following terms and conditions (hereinafter „AGREEMENT“).
 
 ## License
@@ -13,11 +15,11 @@ LICENSOR grants YOU a royalty-free, worldwide, non-exclusive, non-transferable a
 
 ## Term
 
-This license becomes effective at the moment YOU are provided access to the KLICKERUZH by LICENSOR. The license is effective until terminated by LICENSOR. LICENSOR may terminate it at any time by removing access to the KLICKERUZH. It will also terminate the license with immediate effect if YOU fail to comply with any term or condition of this AGREEMENT.
+This license becomes effective at the moment YOU are provided access to the KLICKERUZH by LICENSOR. The license is effective until terminated by LICENSOR. LICENSOR may terminate the license at any time by removing access to the KLICKERUZH. It will also terminate the license with immediate effect if YOU fail to comply with any term or condition of this AGREEMENT.
 
 ## Fees
 
-All users affiliated with the University of Zurich (i.e., in possession of an @uzh.ch e-mail address) are, upon account creation, provided with full access to all functionality provided by KLICKERUZH.
+All users affiliated with the University of Zurich (i.e., with an account based on an @uzh.ch e-mail address) are, upon account creation, provided with full access to all functionality provided by KLICKERUZH.
 
 Users without affiliation to the University of Zurich (i.e., without an @uzh.ch e-mail address) are provided with a free restricted access to the platform. To be provided with full access to the platform as an external user and/or institution, contact us for an individual agreement, or make use of the right to self-host KLICKERUZH as stated within the License.
 
@@ -25,15 +27,15 @@ Some functionality that can be integrated with KLICKERUZH (e.g., language model 
 
 ## Data Protection
 
-Any data collected from participants as part of the service and provided to YOU through functionalities of the KLICKERUZH may be further analyzed or combined with external data sources only in anonymized and non-identifiable form and only for the purpose of teaching or research. The LICENSOR does not take any responsibility regarding analyses YOU undertake with said data. YOU are responsible for transparent information according to data protection regulations regarding any further analysis of the data as provided to YOU within KLICKERUZH.
+Any data collected from participants as part of the service and provided to YOU through functionalities of the KLICKERUZH may be further analyzed or combined with external data sources only in anonymized and non-identifiable form and only for the purpose of teaching or research. The LICENSOR does not take any responsibility regarding analyses YOU undertake with said data. YOU are responsible to ensure data protection regulations are met when exporting data from KLICKERUZH, as well as for informing participants regarding any further analysis of the data as provided to YOU within KLICKERUZH.
 
 If YOU use optional services that can be integrated with but are not provided by KLICKERUZH (e.g., language model integrations from third party providers like OpenAI), YOU need to ensure compatibility of the respective providers’ terms and privacy policy with YOUR binding law and regulations.
 
 ## No Warranty / Indemnification
 
-THE KLICKERUZH ONLINE SERVICE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. LICENSOR MAKES NO REPRESENTATION OR WARRANTY THAT THE KLICKERUZH OR THE USE OF THE KLICKERUZH WILL NOT INFRINGE ANY PATENT OR OTHER PROPRIETARY RIGHTS. IN NO EVENT SHALL LICENSOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS KLICKERUZH, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. LICENSOR DOES NOT WARRANT THAT THE KLICKERUZH WILL BE FREE OF DEFECTS, RUNS WITHOUT INTERRUPTION, IS SUITED FOR INTEROPERATION WITH OHTER PROGRAMS RESPECTIVELY FUNCTIONS IN COMBINATION WITH THE HARDWARE OR SOFTWARE PRODUCTS OF THIRD PARTIES, OR THAT PROGRAM ERRORS WILL BE CORRETED BY LICENSOR.
+The KLICKERUZH is provided "as is" and any express or implied warranties, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed. LICENSOR makes no representation or warranty that the KLICKERUZH or the use of the KLICKERUZH will not infringe any patent or other proprietary rights. In no event shall LICENSOR be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including, but not limited to, procurement of substitute goods or services; loss of use, data, or profits; or business interruption) however caused and on any theory of liability, whether in contract, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this KLICKERUZH, even if advised of the possibility of such damage. LICENSOR does not warrant that the KLICKERUZH will be free of defects, runs without interruption, is suited for interoperation with other programs respectively functions in combination with the hardware or software products of third parties, or that program errors will be corrected by LICENSOR.
 
-YOU ARE RESPONSIBLE FOR THE SELECTION OF THE KLICKERUZH TO ACHIEVE ITS INTENDED RESULTS, USE OF THE KLICKERUZH, AND THE RESULTS OBTAINED THEREFROM. YOU AGREE TO INDEMNIFY AND HOLD LICENSOR AND ITS EMPLOYEES HARMLESS WITH RESPECT TO ALL CLAIMS BY THIRD PARTIES ARISING OUT OF YOUR USE OF THE SOFTWARE.
+You are responsible for the application of the KLICKERUZH to achieve its intended results, use of the KLICKERUZH, and the results obtained therefrom. You agree to indemnify and hold LICENSOR and its employees harmless with respect to all claims by third parties arising out of your use of the software.
 
 ## General
 
