link to /next/DE version

--- a/apps/docs/docs/terms_of_use.mdx
+++ b/apps/docs/docs/terms_of_use.mdx
@@ -5,7 +5,7 @@ title: Terms of Service
 
 **Updated on August 26, 2023**
 
-> This is a translation of the [original statement in German](/nutzungsbedingungen). The translation is provided for information purposes only and has no legal bearing. Only the German document is legally binding.
+> This is a translation of the [original statement in German](/next/nutzungsbedingungen). The translation is provided for information purposes only and has no legal bearing. Only the German document is legally binding.
 
 The Teaching Center of the Department of Banking and Finance at the University of Zurich (hereinafter "LICENSOR") provides this online service (hereinafter "KLICKERUZH") and licenses its use to you (hereinafter "YOU") under the following terms and conditions (hereinafter „AGREEMENT“).
 
